[package]
authors = ["tekjar <k.teza1@gmail.com>"]
name = "rumqtt"
version = "0.20.0"
description = "A fast, lockfree mqtt client"
repository = "https://github.com/AtherEnergy/rumqtt"
readme = "README.md"
license = "Unlicense/MIT"
keywords = ["mqtt", "iot", "async", "tokio", "futures"]

[dependencies]
debug_stub_derive = "0.3"
dns-lookup = "0.8.1"
mio = "0.6"
mio-more = "0.1"
mqtt3 = { git = "https://github.com/snipsco/mqtt3", branch="last_will_payload_is_bin" }
chrono = "0.4"
jsonwebtoken = "3"
serde = "1"
serde_derive = "1"
error-chain = "0.10"
log = "0.3"
rustls = "0.11"

[dev-dependencies]
loggerv = "0.3"
